2010-05-25 j.m.reneau <renejm@users.sourceforge.net> 0.9.6j
	* added ability to enter integers in cose with 0[bB][01] for binary
	0[oO][0-7] for octal and 0[xX][0-9a-fA-F] for hexidecimal

2010-05-18 j.m.reneau <renejm@users.sourceforge.net> 0.9.6i

	* added dialog to verify overwriting file
	* added dialog to verify loading program and loosing changes
	* changed new dialog to only appear if unsaved changes are in buffer
	* added dialog on close to verify loosing changes (both exit and window close)
	* added undo and redo to menu and toolbar for editor
	* changed genhelp.list to make all ids and see also links lowercase - for LINUX
	
2010-05-17 j.m.reneau <renejm@users.sourceforge.net> 0.9.6h

	* added search to Documentation Window
	
2010-05-17 j.m.reneau <renejm@users.sourceforge.net> 0.9.6g

	* changed Documentation Window to use WebView to fix the #tags for navigation
	
2010-05-12 j.m.reneau <renejm@users.sourceforge.net> 0.9.6f

	* added error statements to linus sound and speech functions.  They are still rough and troublesome.

2010-05-11 j.m.reneau <renejm@users.sourceforge.net> 0.9.6e

	* added statements to BASIC256.pro file so qmake would make the "make install" for linux to ease build

0.9.6b

	* GetSlice returns a hex string representing a slice (rectangular area) of the screen
	* PutSlice will draw the slice.  you may defina a transparent color in slice.

0.9.5t

	* Redim an array to change it's size while maintaining it's contents

0.9.5w

	* Log, Log10 functions

0.9.5m

	* Changed color staretemt to accept a single number RGB value r*255^2+g*255+b.
	* changed colors to constants that return a color integer
	* added rgb function to take color triplet and return color integer
	* added getcolor to return the value of the current drawing color
	* added pixel to get the color value of a pixel on the graphics output
	Color, Rgb, GetColor, Pixel

0.9.5i

	* Rewrite sound with LINUX implementation - Sound, Volume

0.9.5h

	* System

0.9.5e

	* Lower, Upper